package baseline;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solutions
 *  Copyright 2021 Jonathan Caques
 */


public class Solution46 {
    public static void main(String[] args) {

        //Histogram object created to access build method
        Histogram hBuilder = new Histogram();
        hBuilder.build();
    }
}
