@startuml
class Solution46{
    +main()
}

class WordCounter{
    +String text
    +String[] text
    +String badger
    +String mushroom
    +String snake

    +int bCounter
    +int mCounter
    +int sCounter

    #read()
    #bCount()
    #mCount()
    #sCount()
}

class Histogram{
    -int badger
    -int mushroom
    -int snake

    -int[] histogram


    #build()
}

WordCounter --> Histogram
Histogram --> Solution46
@enduml